<resources>
    <string name="app_name">UCA</string>
    <!--Login-->
    <string name="log_in">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="e_user_required">User is required</string>
    <string name="e_pass_required">Password is required</string>
    <string name="e_login_failed">Login operation failed. Please try again later</string>
    <string name="logout">Logout</string>

    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="grades">Grades</string>
    <string name="schedule">Schedule</string>
    <string name="expedient">Expedient</string>
    <string name="solvency">Solvency</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="calendar_event">Add event</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cover_image">Cover Image</string>
    <string name="no_title_available">No title available</string>
    <string name="no_description_available">No description available</string>
    <string name="total_grade">Total grade</string>
    <string name="personal">Personal</string>
    <string name="university">University</string>
    <string name="see_more">See more</string>
    <string name="solvency_status">Solvency status</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="date_format_short">M/d/yy</string>
    <string name="add_a_description">Add a description</string>
    <string name="title">Title</string>

    <!--Dropdown list-->
    <string-array name="semester_options_array">
        <item>Semester 01/16</item>
        <item>Semester 02/16</item>
        <item>Semester 03/16</item>
        <item>Semester 01/17</item>
        <item>Semester 02/17</item>
        <item>Semester 03/17</item>
        <item>Semester 01/18</item>
    </string-array>

</resources>
