<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_marginTop ="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginBottom="4dp"
                android:layout_marginHorizontal="@dimen/horizontal_text_margin"
                android:hint="@string/user"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                android:layout_marginHorizontal="@dimen/horizontal_text_margin"
                android:hint="@string/password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:ignore="HardcodedText"
                android:background="#fff"
                android:text="@string/log_in"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>